<resources>
    <string name="app_name">PizzaMaker</string>
    <string name="title_activity_select_pizza">Select Pizza</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="write_us_a_comment">Write us a comment</string>
    <string name="submit_comment">Submit comment</string>
    <string name="login">Login</string>
    <string name="register_new_user">Register new user</string>
    <string name="select_a_pizza">Select a pizza</string>
    <string name="select_your_own_ingredients">Select your own ingredients</string>
    <string name="login_or_register">Login or Register</string>
    <string name="contact_us">Contact us</string>
    <string name="welcome_to_the_pizza_maker">Welcome to the Pizza Maker</string>
    <string name="please_select_one_of_the_following_options">Please select one of the following options</string>
    <string name="baseline">baseline</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="city">City</string>
    <string name="add_profile">Add profile</string>
    <string name="back_to_home">Back to home</string>
    <string name="send_order">Send order</string>
    <string name="topping">Topping</string>
    <string name="name_of_pizza">name of pizza</string>
    <string name="about_us">About us</string>
    <string name="title_activity_select__ingredients">Select_Ingredients</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="select_ingredients">Select ingredients</string>
    <string name="sauce">Sauce</string>
    <string name="the_pizza_maker">The Pizza Maker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cheese">Cheese</string>
</resources>
