<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/toolbarStyle">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/colorPrimary"
            android:layout_weight="1"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/the_pizza_maker">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="900dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="100dp"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="Welcome to the Pizza Maker\n________"
                android:textColor="@android:color/black"
                android:textSize="46sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />


            <ImageButton
                android:id="@+id/select_pizza_option"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="300dp"
                android:layout_marginEnd="200dp"
                android:background="@drawable/customer_border"
                android:elevation="2dp"
                android:src="@drawable/images"
                android:text="@string/select_a_pizza"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/select_pizza"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="108dp"
                android:gravity="center"
                android:src="@drawable/c85e635b76b3d9f1b60b1cd0859bd721"
                android:text="Pick a Pizza"
                app:layout_constraintStart_toStartOf="@id/select_pizza_option"
                app:layout_constraintTop_toTopOf="@id/select_pizza_option"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/select_ingredient_option"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginStart="200dp"
                android:layout_marginTop="300dp"
                android:layout_marginEnd="76dp"
                android:background="@drawable/customer_border"
                android:elevation="2dp"
                android:src="@drawable/pepperoni"
                android:text="@string/select_your_own_ingredients"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/select_ingredient"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="108dp"
                android:gravity="center"
                android:src="@drawable/c85e635b76b3d9f1b60b1cd0859bd721"
                android:text="Build a Pizza"
                app:layout_constraintStart_toStartOf="@id/select_ingredient_option"
                app:layout_constraintTop_toTopOf="@id/select_ingredient_option"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/login_option"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginStart="80dp"
                android:layout_marginTop="450dp"
                android:layout_marginEnd="200dp"
                android:background="@drawable/customer_border"
                android:elevation="2dp"
                android:src="@drawable/login_image"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/login"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_option"
                android:layout_gravity="center"
                android:layout_marginTop="108dp"
                android:gravity="center"
                android:src="@drawable/c85e635b76b3d9f1b60b1cd0859bd721"
                android:text="Account"
                app:layout_constraintStart_toStartOf="@id/login_option"
                app:layout_constraintTop_toTopOf="@id/login_option"
                tools:ignore="MissingConstraints" />


            <ImageButton
                android:id="@+id/about_option"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginStart="200dp"
                android:layout_marginTop="450dp"
                android:layout_marginEnd="76dp"
                android:background="@drawable/customer_border"
                android:elevation="2dp"
                android:src="@drawable/about_image"
                android:text="@string/select_your_own_ingredients"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/about"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_option"
                android:layout_gravity="center"
                android:layout_marginTop="108dp"
                android:gravity="center"
                android:src="@drawable/c85e635b76b3d9f1b60b1cd0859bd721"
                android:text="About Us"
                app:layout_constraintStart_toStartOf="@id/about_option"
                app:layout_constraintTop_toTopOf="@id/about_option"
                tools:ignore="MissingConstraints" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_margin="16dp"
                android:text="Download our Logo"
                app:layout_constraintBottom_toBottomOf="@id/baseline"
                tools:layout_editor_absoluteX="119dp"
                style="@style/ButtonStyle"
                android:layout_marginHorizontal="150dp"
                android:id="@+id/download_logo"
                tools:ignore="MissingConstraints"
                />

            <ImageView
                android:id="@+id/baseline"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="120dp"
                android:background="@android:color/holo_red_dark"
                android:contentDescription="@string/baseline"
                app:layout_constraintTop_toTopOf="@id/login"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="-81dp" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:elevation="6dp"
        android:focusable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/round_call_white_24dp" />


</android.support.design.widget.CoordinatorLayout>
